Item 4 in revision plan and feedback from RSchmidt

--- a/capstone_bib.bib
+++ b/capstone_bib.bib
@@ -214,3 +214,85 @@
   publisher =    {IEEE},
   year =         {2015}
 }
+
+@inproceedings{ozsoy,
+  author =       "Kerem Ozsoy, Ayhan Bozkurt and Ibrahim Tekin",
+  title =        {{2D Indoor positioning system using GPS signals}},
+  doi =          {10.1109/IPIN.2010.5647644},
+  crossref =	{IPIN:2010}
+}
+
+@proceedings{IPIN:2010,
+  title =        "International Conference on Indoor Positioning and Indoor Navigation",
+  booktitle =     "International Conference on Indoor Positioning and Indoor Navigation",
+  publisher =    {IEEE},
+  year =         {2010},
+  isbn =		{978-1-4244-5865-3},
+  venue = {Zurich, Switzerland}
+}
+
+@online{cartdata,
+  author = {{Cartographer Authors}},
+  title = {{Public Data}},
+  year = 2016,
+  url = {http://google-cartographer-ros.readthedocs.io/en/latest/data.html},
+  urldate = {2017-10-24}
+}
+
+@online{scanse,
+  author = {{IEEE Spectrum}},
+  title = {{Sweep Is a \$250 LIDAR With Range of 40 Meters That Works Outdoors}},
+  year = 2017,
+  url = {https://spectrum.ieee.org/automaton/robotics/robotics-hardware/sweep-lidar-for-robots-and-drones},
+  urldate = {2017-10-24}
+}
+
+@online{arduhistory,
+  author = {Ardupilot},
+  title = {{History of Ardupilot}},
+  year = 2017,
+  url = {http://ardupilot.org/planner2/docs/common-history-of-ardupilot.html},
+  urldate = {2017-10-24}
+}
+
+@online{ekftutorial,
+  author = {Joan Sola},
+  title = {{Simulataneous localization and mapping with the extended Kalman filter}},
+  year = 2014,
+  url = {http://www.iri.upc.edu/people/jsola/JoanSola/objectes/curs_SLAM/SLAM2D/SLAM%20course.pdf},
+  urldate = {2017-10-24}
+}
+
+@inproceedings{harris,
+  author =       "C. Harris and M. Stephens",
+  title =        {{A combined corner and edge detector}},
+  crossref =	{AVC:1988}
+}
+
+@proceedings{AVC:1988,
+  title =        "Proceedings of the 4th Alvey Vision Conference",
+  booktitle =     "Proceedings of the 4th Alvey Vision Conference",
+  publisher =    {The Plessey Company plc.},
+  year =         {1988}
+}
+
+@online{slamoverview,
+  author = {Robert Reid},
+  title = {{Large-Scale Simultaneous Localization and Mapping for Teams of Mobile Robots}},
+  year = 2016,
+  url = {http://robotics.ee.uwa.edu.au/theses/2016-SLAM-Reid-PhD.pdf},
+  urldate = {2017-10-24}
+}
+
+@inproceedings{cart,
+  author =       "W. Hess, D. Kohler, H. Rapp, and D. Andor",
+  title =        {{Real-Time Loop Closure in 2D LIDAR SLAM}},
+  crossref =	{ICRA:2016}
+}
+
+@proceedings{ICRA:2016,
+  title =        "International Conference on Robotics and Automation",
+  booktitle =     "International Conference on Robotics and Automation",
+  publisher =    {IEEE},
+  year =         {2016}
+}
