--- a/diagrams/estimationAlg_Fig3.tex
+++ b/diagrams/estimationAlg_Fig3.tex
@@ -1,7 +1,7 @@
 % Graphic for TeX using PGF
-% Title: /home/lach/uni/ursa/estimationAlg_Fig3
+% Title: /home/lach/uni/ursa/final_report/diagrams/estimationAlg_Fig3.dia
 % Creator: Dia v0.97.3
-% CreationDate: Sun Sep 17 13:12:01 2017
+% CreationDate: Tue Oct 24 18:45:33 2017
 % For: lach
 % \usepackage{tikz}
 % The following commands are not supported in PSTricks at present
@@ -46,33 +46,6 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \node at (32.950000\du,22.195000\du){PID};
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (8.000000\du,20.000000\du)--(8.000000\du,24.000000\du)--(16.500000\du,24.000000\du)--(16.500000\du,20.000000\du)--cycle;
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetdash{}{0pt}
-\pgfsetmiterjoin
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (8.000000\du,20.000000\du)--(8.000000\du,24.000000\du)--(16.500000\du,24.000000\du)--(16.500000\du,20.000000\du)--cycle;
-% setfont left to latex
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\node at (12.250000\du,22.195000\du){Compass};
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetdash{}{0pt}
-\pgfsetbuttcap
-{
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{dialinecolor}
-% was here!!!
-\pgfsetarrowsend{to}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (16.500000\du,22.000000\du)--(18.000000\du,22.000000\du);
-}
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
@@ -131,7 +104,7 @@
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (12.250000\du,27.195000\du){IMU/Baro};
+\node at (12.250000\du,27.195000\du){IMU};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
@@ -250,4 +223,17 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \node[anchor=west] at (23.000000\du,15.500000\du){Obstacles};
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{dialinecolor}
+% was here!!!
+\pgfsetarrowsend{to}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (12.250000\du,25.000000\du)--(12.250000\du,19.000000\du);
+}
 \end{tikzpicture}
