Added lit review for nav stuff

--- a/capstone_bib.bib
+++ b/capstone_bib.bib
@@ -341,3 +341,63 @@
 	howpublished={\url{https://github.com/erlerobot/3d-support/blob/master/Erle-Brain\%202\%20Case/Erle-Brain2\_CaseCamera.STL}}, 
 	note={Accessed: 2017-10-24}}		
 
+@article{mac2016heuristic,
+  title={Heuristic approaches in robot path planning: A survey},
+  author={Mac, Thi Thoa and Copot, Cosmin and Tran, Duc Trung and De Keyser, Robin},
+  journal={Robotics and Autonomous Systems},
+  volume={86},
+  pages={13--28},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{raja2011path,
+  title={Path planning for a mobile robot in dynamic environments},
+  author={Raja, P and Pugazhenthi, S},
+  journal={International Journal of Physical Sciences},
+  volume={6},
+  number={20},
+  pages={4721--4731},
+  year={2011},
+  publisher={Academic Journals}
+}
+
+@article{shiller2000online,
+  title={Online suboptimal obstacle avoidance},
+  author={Shiller, Zvi},
+  journal={The International Journal of Robotics Research},
+  volume={19},
+  number={5},
+  pages={480--497},
+  year={2000},
+  publisher={SAGE Publications}
+}
+
+@inproceedings{savkin2014simple,
+  title={A simple real-time algorithm for safe navigation of a non-holonomic robot in complex unknown environments with moving obstacles},
+  author={Savkin, Andrey V and Wang, Chao},
+  booktitle={Control Conference (ECC), 2014 European},
+  pages={1875--1880},
+  year={2014},
+  organization={IEEE}
+}
+
+@article{chen2017exploration,
+  title={EXPLORATION METHOD IMPROVEMENTS OF AUTONOMOUS ROBOT FOR A 2-D ENVIRONMENT NAVIGATION},
+  author={Chen, Nien-Yu and Shaw, Jinsiang and Lin, Hsien-I},
+  journal={Journal of Marine Science and Technology},
+  volume={25},
+  number={1},
+  pages={34--42},
+  year={2017},
+  publisher={??????}
+}
+
+@inproceedings{marder2010office,
+  title={The office marathon: Robust navigation in an indoor office environment},
+  author={Marder-Eppstein, Eitan and Berger, Eric and Foote, Tully and Gerkey, Brian and Konolige, Kurt},
+  booktitle={Robotics and Automation (ICRA), 2010 IEEE International Conference on},
+  pages={300--307},
+  year={2010},
+  organization={IEEE}
+}
